[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/level/sprites/desert-backgorund.png" type="Texture" id=1]
[ext_resource path="res://assets/level/music/Common Fight.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/level/sprites/clouds.png" type="Texture" id=3]
[ext_resource path="res://assets/level/Level.gd" type="Script" id=4]

[node name="Level" type="Node2D" groups=["level"]]
script = ExtResource( 4 )

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="Background" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2( 0, 272 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxLayer"]
texture = ExtResource( 1 )
centered = false

[node name="Clouds1" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Clouds1"]
motion_mirroring = Vector2( 0, 272 )

[node name="Sprite" type="Sprite" parent="Clouds1/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.313726 )
texture = ExtResource( 3 )
centered = false

[node name="Clouds2" type="ParallaxBackground" parent="."]
offset = Vector2( 0, 128 )
transform = Transform2D( 1, 0, 0, 1, 0, 128 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="Clouds2"]
motion_mirroring = Vector2( 0, 272 )

[node name="Sprite" type="Sprite" parent="Clouds2/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.470588 )
texture = ExtResource( 3 )
centered = false
